--- a/mern-calendar-app/src/components/App/App.scss
+++ b/mern-calendar-app/src/components/App/App.scss
@@ -7,4 +7,17 @@
 
 body {
   margin: 0 auto;
+  padding: 0 0 40px 0;
+}
+
+footer {
+  background-color: $dark-green;
+  color: $white;
+  display: flex;
+  justify-content: center;
+  margin: 25px 0 0 0;
+  padding: 10px;
+  position: fixed;
+  bottom: 0;
+  width: 100%;
 }
