--- a/mern-calendar-app/src/components/OneEvent/OneEvent.scss
+++ b/mern-calendar-app/src/components/OneEvent/OneEvent.scss
@@ -1,6 +1,6 @@
 @import '../color-palette.scss';
 
-button {
+.buttons {
     border: 1px solid $dark-green;
     border-radius: 4px;
     color: $med-green;
